// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GenericDialog > Render > renders correctly 1`] = `
<div
  data-v-app=""
>
  
  <!---->
  <!--teleport start-->
  <!--teleport end-->
  
</div>
`;

exports[`GenericDialog > Render > renders correctly when value is false 1`] = `
<div
  data-v-app=""
>
  
  <!---->
  <!---->
  
</div>
`;
